--- a/services/discovery/pom.xml
+++ b/services/discovery/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.andre</groupId>
+	<groupId>com.andre.ecommerce</groupId>
 	<artifactId>discovery</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>discovery</name>
